<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/messages_header">

        <SwitchPreferenceCompat
            app:key="notifications"
            app:title="@string/notification_preference"
            app:defaultValue="true"
            app:summaryOff="@string/notifications_summary_off"
            app:summaryOn="@string/notifications_summary_on"/>

    </PreferenceCategory>

    <!--
    <PreferenceCategory app:title="@string/feedback_header">

        <Preference
            app:key="feedback"
            app:title="Send feedback"
            app:summary="Report technical issues or suggest new features">

        </Preference>

    </PreferenceCategory>
    -->

</PreferenceScreen>