<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/mainLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/mainTeachingMessagesBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center_vertical|center"
                android:drawableTop="@drawable/main_manu_teaching_message"
                android:text="@string/main_menu_teaching_messages_btn"
                android:textColor="@android:color/white"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/mainTeachingBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center_vertical|center"
                android:drawableTop="@drawable/main_manu_teaching"
                android:text="@string/main_menu_btn_1"
                android:textColor="@android:color/white"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/mainOpenSoruceBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center_vertical|center"
                android:drawableTop="@drawable/main_manu_code"
                android:textColor="@android:color/white"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/main_menu_btn_2"
                android:textStyle="bold" />

            <Button
                android:id="@+id/mainTechnicalBlogBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center_vertical|center"
                android:drawableTop="@drawable/main_manu_posts"
                android:textColor="@android:color/white"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/main_menu_btn_3"
                android:textStyle="bold" />

            <Button
                android:id="@+id/mainAcademicStudentsBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center_vertical|center"
                android:drawableTop="@drawable/main_manu_students"
                android:textColor="@android:color/white"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/main_menu_btn_4"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/mainPublicationsBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center_vertical|center"
                android:drawableTop="@drawable/main_manu_papers"
                android:textColor="@android:color/white"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/main_menu_btn_5"
                android:textStyle="bold"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>