<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryComplete4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/personalPanelHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:gravity="center_horizontal|center_vertical"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:text="@string/teddy_lazebnik"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/personalPanelHeaderSecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:gravity="center_horizontal|center_vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/personal_panel_intrests"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:gravity="center_horizontal|center_vertical"
                android:layout_weight="1"
                android:background="@color/colorPrimaryComplete"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/personalPanelPhoneImg"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:srcCompat="@drawable/white_phone_icon" />

                <View
                    android:id="@+id/personalPanelPhoneDivider"
                    android:layout_width="80dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center|top"
                    android:background="?android:attr/listDivider"
                    android:backgroundTint="#FFFFFF"
                    android:paddingBottom="10dp" />

                <TextView
                    android:id="@+id/personalPanelPhoneText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/personal_panel_pnone"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:gravity="center_horizontal|center_vertical"
                android:layout_weight="1"
                android:background="@color/colorPrimaryComplete"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/personalPanelEmailImg"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:srcCompat="@drawable/main_manu_teaching_message" />

                <View
                    android:id="@+id/personalPanelEmailDivider"
                    android:layout_width="80dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center|top"
                    android:background="?android:attr/listDivider"
                    android:backgroundTint="#FFFFFF"
                    android:paddingBottom="10dp" />

                <TextView
                    android:id="@+id/personalPanelEmailText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/personal_panel_email"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:gravity="center_horizontal|center_vertical"
                android:layout_weight="1"
                android:background="@color/colorPrimaryComplete"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/personalPanelOfficeImg"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:srcCompat="@drawable/white_office_icon" />

                <View
                    android:id="@+id/personalPanelOfficeDivider"
                    android:layout_width="80dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center|top"
                    android:background="?android:attr/listDivider"
                    android:backgroundTint="#FFFFFF"
                    android:paddingBottom="10dp" />

                <TextView
                    android:id="@+id/personalPanelOfficeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/personal_panel_office"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:gravity="center_horizontal|center_vertical"
                android:layout_weight="1"
                android:background="@color/colorPrimaryComplete"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/personalPanelSocialImg"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:srcCompat="@drawable/white_linkedin_icon" />

                <View
                    android:id="@+id/personalPanelSocialDivider"
                    android:layout_width="80dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center|top"
                    android:background="?android:attr/listDivider"
                    android:backgroundTint="#FFFFFF"
                    android:paddingBottom="10dp" />

                <TextView
                    android:id="@+id/personalPanelSocialText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/personal_profile_social"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/personalPanelHeaderSecond3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryComplete4"
            android:gravity="start|center_vertical"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/personal_panel_current_projects_header"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteY="420dp" />

        <LinearLayout
            android:id="@+id/personalPanelCurrentProjectsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/personalPanelCurrentProjectItem1"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:background="@color/colorPrimaryComplete4"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="90dp"
                    android:layout_weight="3"
                    android:background="@color/colorPrimaryComplete4"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/personalPanelCurrentProjectItem1Header"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|start"
                        android:paddingStart="20dp"
                        android:paddingEnd="10dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="CS"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <View
                        android:id="@+id/personalPanelCurrentProjectItem1Divider"
                        android:layout_width="2dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_vertical"
                        android:background="?android:attr/listDivider"
                        android:backgroundTint="#FFFFFF" />

                    <TextView
                        android:id="@+id/personalPanelCurrentProjectItem1Text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|start"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="Mathematical Model for Medical Nanoparticles in the Circulatory System"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/personalPanelCurrentProjectItem2"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:background="@color/colorPrimaryComplete4"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="90dp"
                    android:layout_weight="3"
                    android:background="@color/colorPrimaryComplete4"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/personalPanelCurrentProjectItem2Header"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|start"
                        android:paddingStart="20dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="10dp"
                        android:text="Math"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <View
                        android:id="@+id/personalPanelCurrentProjectItem2Divider"
                        android:layout_width="2dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_vertical"
                        android:background="?android:attr/listDivider"
                        android:backgroundTint="#FFFFFF" />

                    <TextView
                        android:id="@+id/personalPanelCurrentProjectItem2Text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|start"
                        android:paddingStart="20dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="20dp"
                        android:paddingBottom="10dp"
                        android:text="Extended Mathematical Model for BCG Immunotherapy of Bladder Cancer with Geometry"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/personalPanelCurrentProjectItem3"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:background="@color/colorPrimaryComplete4"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="90dp"
                    android:layout_weight="3"
                    android:background="@color/colorPrimaryComplete4"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/personalPanelCurrentProjectItem3Header"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|start"
                        android:paddingStart="20dp"
                        android:paddingEnd="10dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="CS"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <View
                        android:id="@+id/personalPanelCurrentProjectItem3Divider"
                        android:layout_width="2dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_vertical"
                        android:background="?android:attr/listDivider"
                        android:backgroundTint="#FFFFFF" />

                    <TextView
                        android:id="@+id/personalPanelCurrentProjectItem3Text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|start"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="Hebrew words associative distance and connection to depression."
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>